# kleene-type

./: .gitignore  cabal.project  kleene-type.cabal
plugin/: KleenePlugin.hs
plugin/KleenePlugin/: Debug.hs  Elaborate.hs  Matching.hs  Names.hs  SWT.hs  SourcePlugin.hs  Synthesis.hs  TcPlugin.hs  TypeEq.hs  Types.hs
src/Kleene/: Type.hs
src/Kleene/Type/: Examples.hs
src/Kleene/Type/Examples/: KleeneSH.hs
test/: KleeneDemo.hs  KleeneSHExample.hs  Tests.hs
